--- a/index.html
+++ b/index.html
@@ -11,6 +11,17 @@
     <title>Donate Now</title>
 </head>
 <body>
-    
+    <section class="hero-section">
+        <div class="hero-text">
+            <h1>Let’s Help Those Who Are <br> More In Need</h1>
+            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli <br> deterruisset. No duo populo animal noluisse,
+            enim</p>
+            <a href="#">Donate Now</a>
+        </div>
+    </section>
 </body>
+<footer>
+    <h3>Be Humble</h3>
+    <p>I’m gonna do it</p>
+</footer>
 </html>
