--- a/index.html
+++ b/index.html
@@ -14,9 +14,28 @@
     <section class="hero-section">
         <div class="hero-text">
             <h1>Let’s Help Those Who Are <br> More In Need</h1>
-            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli <br> deterruisset. No duo populo animal noluisse,
-            enim</p>
+            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli <br> deterruisset. No duo populo animal noluisse, enim</p>
             <a href="#">Donate Now</a>
+        </div>
+    </section>
+    <section class="donate-area">
+        <div class="donate-area-info">
+            <h2>Donate Now</h2>
+            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli <br> deterruisset. No duo populo animal noluisse, enim</p>
+        </div>
+        <div class="donate-amount">
+            <p>100tk</p>
+            <p class="selected-donate-amount">200tk</p>
+            <p>500tk</p>
+            <p>1000tk</p>
+            <p>5000tk</p>
+        </div>
+        <div class="form-area">
+            <form action="">
+                <input type="text" placeholder="Other Amount (Taka)"> <br>
+                <hr>
+                <button type="submit">Donate Now</button>
+            </form>
         </div>
     </section>
 </body>
