other section added

--- a/index.html
+++ b/index.html
@@ -38,6 +38,59 @@
             </form>
         </div>
     </section>
+    <section class="donate-plan">
+        <div class="donate-area-info">
+            <h2>Our Donate Plan</h2>
+            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli <br> deterruisset. No duo populo animal noluisse, enim</p>
+        </div>
+        <div class="all-donate-plan">
+            <div class="donate-plan-one">
+                <img src="icons/food.png" alt="">
+                <h3>Food for a family</h3>
+                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+            </div>
+            <div class="donate-plan-two">
+                <img src="icons/shelter.png" alt="">
+                <h3>Shelter for a family</h3>
+                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+            </div>
+            <div class="donate-plan-three">
+                <img src="icons/Frame-1.png" alt="">
+                <h3>Education for a child</h3>
+                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+            </div>
+        </div>
+    </section>
+    <section class="testimonial-area">
+        <div class="testimonial-title">
+            <h2>Testimonial</h2>
+        </div>
+        <div class="testimonial-text">
+            <p>The legal definition of a charitable organization (and of charity) varies between countries <br> and in some instances regions of the country. The regulation, the tax treatment.</p>
+        </div>
+        <div class="testimonial-author">
+            <img class="author-iamge" src="images/testimonial-image.jpg" alt="">
+            <h3>John Balmer</h3>
+            <p>Jounalist, London</p>
+        </div>
+        <div class="arrow">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+    </section>
+    <section class="subscription">
+        <div class="donate-area-info">
+            <h2>Get My Updates</h2>
+            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli <br> deterruisset. No duo populo animal noluisse, enim</p>
+        </div>
+        <div class="subscription-form">
+            <form action="">
+                <input type="text" placeholder="Email">
+                <button type="submit">Subscribe</button>
+            </form>
+        </div>
+    </section>
 </body>
 <footer>
     <h3>Be Humble</h3>
